--- a/Auth_session_tokens/app/templates/signup.html
+++ b/Auth_session_tokens/app/templates/signup.html
@@ -36,7 +36,7 @@
         <button type="submit">Signup</button>
     </form>
 
-    <p>Already have an account? <a href="/login/">Login here</a></p>
+    <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
 </div>
 
 </body>
