--- a/Auth_session_tokens/app/templates/login.html
+++ b/Auth_session_tokens/app/templates/login.html
@@ -41,7 +41,7 @@
         <button type="submit">Login</button>
     </form>
 
-    <p>Don't have an account? <a href="/signup/">Signup</a></p>
+    <p>Don't have an account? <a href="{% url 'signup' %}">Signup</a></p>
 </div>
 
 </body>
